pom updated with surefire forks and space args