@@ -70,11 +70,10 @@
                 <!-- https://maven.apache.org/surefire/maven-surefire-plugin/ -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
                 <configuration>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1024m -XX:MaxMetaspaceSize=256m</argLine>
                 </configuration>
             </plugin>
 
